# advent-of-fpga-2025

./: .gitignore  README.md
advent_of_hardcaml/: dune-project
advent_of_hardcaml/day01/: day01.ml  day01_core.ml  day01_tb.ml  decoder_fsm.ml  dune  solver.ml
advent_of_hardcaml/day02/: day02_core.ml  day02_tb.ml  dune  period_summer.ml  range_summer.ml
advent_of_hardcaml/day12/: config.ml  day12_core.ml  day12_tb.ml  decoder_fsm.ml  dune  generate_verilog.ml  region_checker.ml
advent_of_hardcaml/utils/: dune  rom.ml
day01/verilog/: day01_core.v  decoder_fsm.v  rom.v  solver.v
docs/: .$diagrams.drawio.dtmp  design_approach.md  diagrams.drawio
verilog/day01/: Makefile  day01_core.v  day01_tb.v  decoder_fsm.v  input1.txt
verilog/day02/: Makefile  day02_core.v  day02_tb.v  input1.txt  period_summer.v  range_summer.v
verilog/day03/: Makefile  day03_core.v  day03_tb.v  input1.txt
verilog/day04/: Makefile  day04_core.v  day04_tb.v  input1.txt  row_logic.v
verilog/day05/: Makefile  day05_core.v  day05_tb.v  input1.txt
verilog/day05_old/: Makefile
verilog/day05_optimised/: Makefile  day05_opt_core.v  day05_opt_tb.v
verilog/day06/: Makefile  day06_core.v  day06_tb.v  input1.txt  reference_sol.py
verilog/day07/: Makefile  day07_core.v  day07_tb.v  input1.txt
verilog/day08/: Makefile  bitonic_sort.py  bitonic_sort.v  bitonic_sort_tb.v  day08_core.v  day08_tb.v  heap_sort.v  heap_sort_tb.v  input1.txt
verilog/day09/: Makefile  day09_core.v  day09_tb.v  input1.txt  pipeline_stage.v
verilog/day10/: Makefile  day10_core.v  day10_tb.v  gf2_solver.v  (+4 more)
(+24 files in other folders)
